--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,23 +8,17 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
 
-  <body no-touch no-js>
+  <body no-touch>
+    <!-- TODO: Move .clocks into JS -->
     <div class="clocks">
       <div class="clocks__frame"></div>
     </div>
 
+    <!-- TODO: Move .copyright into JS -->
     <p class="copyright">
       <span class="copyright__bug">© 2019</span> <a class="copyright__link" href="https://gauslin.com" title="Visit Gauslin.com" target="_blank" rel="noopener">Ben Gauslin</a>
     </p>
 
     <script src="clock.js"></script>
-
-    <noscript>
-      <div class="no-js">
-        <p class="no-js__message">
-          Please <a href="http://enable-javascript.com" title="How to enable JavaScript in your browser" class="no-js__link">enable JavaScript</a> to view this website. Thanks!
-        </p>
-      </div>
-    </noscript>
   </body>
 </html>
