--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="description" content="Analog clock that reveals patterns over time.">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="preload"as="font" type="font/woff2" crossorigin="crossorigin"
-          href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="preload" as="font" type="font/woff2" crossorigin="crossorigin"
+          href="https://gauslin.com/fonts/AvenirNext-Variable.woff2">
   </head>
   <body>
     <clock-app></clock-app>
