--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="description" content="Analog clock that reveals patterns over time.">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png">
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
   </head>
   <body>
     <clock-app></clock-app>
