--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./favicon.svg" type="image/svg+xml">
   </head>
   <body>
-    <clock-app></clock-app>
+    <clock-app role="main"></clock-app>
     <noscript>
       Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
     </noscript>
